more work on ch2

--- a/figs/c-space.tex
+++ b/figs/c-space.tex
@@ -23,8 +23,8 @@
    (3.0,0.0) (3.5,1.0) (4.9,1.5)};
 
 % obstacle labels
-\node[text=black!70] at (2.6,3.0) {$O_1$};
-\node[text=black!70] at (4.1,0.6) {$O_2$};
+\node[text=black!70] at (2.6,3.0) {$CO_1$};
+\node[text=black!70] at (4.1,0.6) {$CO_2$};
 
 % path
 \draw plot [smooth,tension=0.6,thick] coordinates {
