--- a/references.bib
+++ b/references.bib
@@ -79,6 +79,20 @@
    issn = {2153-0858},
 }
 
+=== From sagepub (IJRR) ===
+@article{barraquand1991distributedrepresentation,
+   author = {Barraquand, Jérôme and Latombe, Jean-Claude},
+   title = {Robot Motion Planning: A Distributed Representation
+      Approach},
+   year = {1991},
+   journal = {The International Journal of Robotics Research},
+   volume = {10},
+   number = {6},
+   pages = {628-649},
+   doi = {10.1177/027836499101000604},
+   URL = {http://ijr.sagepub.com/content/10/6/628.abstract},
+}
+
 === From rand.org ===
 @techreport{beckmann1955transportation,
    author = {Martin J. Beckmann and C. B. McGuire and C. B. Winsten},
