--- a/thesis-abstract.tex
+++ b/thesis-abstract.tex
@@ -15,8 +15,8 @@ detracts from its total performance.
 Manipulation tasks, however, present challenges
 to efficient motion planning.
 Tightly coupled steps (e.g. choices of object grasps or placements)
-allow poor early decisions to render subsequent steps difficult;
-this encourages longer planning horizons.
+allow poor early decisions to render subsequent steps difficult,
+which this encourages longer planning horizons.
 However,
 an articulated robot
 situated within a geometrically complex and dynamic environment
