added some comments and fixed up the intro to chapter 3

--- a/references.bib
+++ b/references.bib
@@ -63,6 +63,20 @@
 }
 
 === From IEEE Xplore ===
+@inproceedings{arslan2013rrtsharp,
+   author = {O. Arslan and P. Tsiotras},
+   title = {Use of relaxation methods in sampling-based algorithms for
+      optimal motion planning},
+   booktitle = {Robotics and Automation (ICRA), 2013 IEEE International
+      Conference on},
+   year = {2013},
+   pages = {2421-2428},
+   doi = {10.1109/ICRA.2013.6630906},
+   ISSN = {1050-4729},
+   month = may,
+}
+
+=== From IEEE Xplore ===
 @inproceedings{bagnell2012arms,
    author = {Bagnell, J.A. and Cavalcanti, F. and Lei Cui
       and Galluzzo, T. and Hebert, M. and Kazemi, M.
