--- a/thesis-ch01-intro.tex
+++ b/thesis-ch01-intro.tex
@@ -99,6 +99,9 @@ This thesis develops an approach to motion planning
 for articulated robots
 which addresses these four challenges.
 
+\cdnote{From Sidd: add a sweet graph showing the relationship
+between the chapters!}
+
 \paragraph{\nameref{chap:roadmaps} (Chapter~\ref{chap:roadmaps})}
 We begin by reviewing the definition of the motion planning problem
 in terms of the robot's configuration space.
@@ -183,6 +186,8 @@ cached checks and multi-step problems.
 
 \section{Summary of Contributions}
 
+\cdnote{Make this into a table of some kind, like the proposal doc?}
+
 \begin{itemize}
 \item The LazySP pathfinding algorithm for graphs with expensive
    edge evaluations,
@@ -199,6 +204,10 @@ cached checks and multi-step problems.
    Open Motion Planning Library (OMPL), \citep{sucan2012ompl}
    and OpenRAVE \citep{diankov2010openrave} software packages.
 \end{itemize}
+
+\cdnote{Maybe talk more about different applications /
+   expensive edge validation /
+   the relationship between lazy and dynamic search / etc?}
 
 %While well-suited for arms,
 %the contributions are relevant more broadly.
