--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -544,6 +544,7 @@ Many more recent algorithms such as
 RRT* \citep{karaman2010rrtstar},
 PRM* \citep{karaman2011samplingoptimal},
 FMT* \citep{janson2015fmtstar},
+RRT$^{\#}$ \citep{arslan2013rrtsharp},
 and BIT* \citep{gammell2015bitstar} make use of the same
 uniform obstacle distribution.
 Such a distribution is attractive both because
