--- a/thesis-ch07-discussion.tex
+++ b/thesis-ch07-discussion.tex
@@ -1,6 +1,13 @@
 \chapter{Discussion}
 
-\paragraph{Task and motion planning.}
+\cdnote{From Sidd:
+discussion section: long-term view
+Where should we be going?
+No need to justify things!
+What we want the world to know!
+}
+
+\paragraph{Task and Motion Planning.}
 Other recent work has married symbolic reasoning with geometric planning
 for tasks with multiple subtasks
 as multi-modal planning \citep{hauser2010multi},
@@ -9,3 +16,11 @@ or hierarchical or bridged representations and interfaces
 \citep{cambon2009hybrid}, \citep{gravot2005asymov},
 \citep{srivastava2014taskmotion}.
 
+\paragraph{Other Applications of LazySP.}
+\cdnote{Talk about satellite application from that guy.}
+
+\paragraph{Maximizing Utility in Expectation}
+\cdnote{Talk about Shushman's POMP stuff.}
+
+\paragraph{Connection between Lazy and Incremental Search}
+\cdnote{Beliefs over subset membership vs dynamic worlds!}
